[package]
name = "bt_decode"
version = "0.7.0"
edition = "2021"

[lib]
name = "bt_decode"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.26.0"
features = ["extension-module", "generate-import-lib"]

[dependencies.custom_derive]
path = "libs/custom-derive"

[dependencies]
frame-metadata = { version = "16.0.0", features = [ "current", "decode", "serde_full" ], default-features = false }

codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.2", features = [ "serde" ], default-features = false }
serde_json = { version = "1.0.127", features = [ "alloc" ], default-features = false }
scale-value = { version = "0.16.2", default-features = false }
pythonize = "0.26.0"
log = { version = "0.4.25", default-features = false }
pyo3-log = { version = "0.13.1", default-features = false }
blake2 = "0.10"
base58 = "0.2"
