[project]
name = "bt-decode"
version = "0.7.0"
description = "A wrapper around the scale-codec crate for fast scale-decoding of Bittensor data structures."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["substrate", "scale", "codec", "bittensor"]

dependencies = ["toml~=0.10"]
requires-python = ">= 3.9"

authors = [
  {name = "Cameron Fairchild", email = "c@latent.to"},
  {name = "Opentensor Foundation", email = "hello@bittensor.com"},
]
maintainers = [
  {name = "Cameron Fairchild", email = "c@latent.to"}
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12", 
        "Programming Language :: Python :: 3.13",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",]

[project.urls]
Repository = "https://github.com/opentensor/bt-decode"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project.optional-dependencies]
dev = ["maturin", "ruff==0.11.5"]
test = [
    "bittensor>=9.4.0",
    "pytest==7.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.12.0",
    "pytest-split==0.8.0",
    "pytest-xdist==3.0.2",
    "pytest-rerunfailures==10.2",
    "ddt==1.6.0",
]
